fixed the padding and avatar position on mobile screen

--- a/components/user/avatar-new/styles.css
+++ b/components/user/avatar-new/styles.css
@@ -19,6 +19,11 @@
      transition: transform 0.3s ease-in-out;
  }
 
+ .avatar-none-mobile {
+    transform: translateY(34%);
+    transition: transform 0.3s ease-in-out;
+}
+
  .avatar-none-scrolled {
      transform: translateY(0%);
      transition: transform 0.3s ease-in-out;
